Add Google Translate API integration and fix Arabic translations - Replace 'iÅ¡q with Ø¹Ø´Ù‚ in Arabic - Fix hero section to show Arabic title correctly - Add translation script for auto-translating locale files - Fix PostCSS config for Tailwind CSS v4 - Update all translation files with proper UTF-8 encoding

--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -1,48 +1,494 @@
 {
   "hero": {
-    "subtitle": "'išq",
-    "tagline": "عيش بطيء أقرب إلى ما يهم حقاً",
+    "subtitle": "عشق",
+    "tagline": "العيش ببطء أقرب إلى ما يهم حقًا",
     "cta": "ابدأ رحلتك"
   },
   "nav": {
-    "home": "الرئيسية",
-    "news": "الأخبار",
-    "party": "الحفلات",
-    "boutique": "المتجر",
-    "association": "الجمعية",
-    "photography": "التصوير"
+    "home": "بيت",
+    "news": "أخبار",
+    "party": "حزب",
+    "boutique": "بوتيك",
+    "association": "منظمة",
+    "photography": "التصوير والمونتاج",
+    "services": "خدمات",
+    "housing": "السكن"
+  },
+  "footer": {
+    "tagline": "عيش حياةً هادئةً أقرب إلى ما يهمّك حقًا. انضمّ إلينا لنبني حياةً أكثر وعيًا وترابطًا ومعنى.",
+    "services": "خدمات",
+    "company": "شركة",
+    "legal": "قانوني",
+    "social": {
+      "instagram": "انستغرام",
+      "facebook": "فيسبوك",
+      "twitter": "تغريد",
+      "email": "بريد إلكتروني"
+    },
+    "links": {
+      "worldNews": "اخبار العالم",
+      "party": "حزب",
+      "boutique": "بوتيك",
+      "association": "منظمة",
+      "photography": "التصوير الفوتوغرافي",
+      "aboutUs": "معلومات عنا",
+      "philosophy": "فلسفة",
+      "contact": "اتصال",
+      "careers": "الوظائف",
+      "privacyPolicy": "سياسة الخصوصية",
+      "termsOfService": "شروط الخدمة",
+      "shippingInfo": "معلومات الشحن",
+      "returns": "الإرجاعات"
+    },
+    "copyright": "جميع الحقوق محفوظة.",
+    "madeWith": "مصنوع من",
+    "forMindfulLiving": "من أجل حياة واعية"
+  },
+  "philosophy": {
+    "title": "ما هو",
+    "subtitle": "؟",
+    "paragraph1": "في عالم يتحرك بسرعة كبيرة،",
+    "paragraph1Bold": "يذكرنا بالتوقف والتنفس والتواصل مرة أخرى مع ما يهم حقًا: الطبيعة والمجتمع والعيش الواعي.",
+    "paragraph2": "الأمر لا يتعلق بالقيام بأقل جهد، بل بالقيام بما هو مهم. اختيار الجودة على الكمية. بناء العلاقات على المعاملات. العيش بوعي، لا بردود الأفعال.",
+    "paragraph3": "انضم إلينا في إنشاء حركة نحو أسلوب حياة أكثر وعيًا وترابطًا ومعنى.",
+    "values": {
+      "natureFirst": {
+        "title": "الطبيعة أولاً",
+        "description": "نحن نؤمن بالعيش في وئام مع الطبيعة، واحترام الأرض التي تدعمنا."
+      },
+      "mindfulLiving": {
+        "title": "العيش بوعي",
+        "description": "كل خيار مهم. نختار تجارب ومنتجات تتوافق مع قيمنا الواعية."
+      },
+      "community": {
+        "title": "مجتمع",
+        "description": "بناء الروابط التي لها أهمية، ودعم بعضنا البعض في رحلتنا نحو الحياة البطيئة."
+      },
+      "authenticity": {
+        "title": "أصالة",
+        "description": "احتضان ما هو حقيقي وذو معنى وصادق بالنسبة لنا وما نقدره."
+      }
+    }
+  },
+  "cta": {
+    "title": "هل أنت مستعد لبدء رحلتك؟",
+    "description": "انضم إلى آلاف الأشخاص الذين اختاروا عيش حياة أكثر وعيًا. ابدأ باستكشاف خدماتنا اليوم.",
+    "exploreServices": "استكشاف الخدمات",
+    "shopBoutique": "متجر بوتيك"
+  },
+  "party": {
+    "hero": {
+      "title": "تخطيط الفعاليات بالخدمة الكاملة",
+      "description": "خدمات تنسيق الموسيقى، والمأكولات والمشروبات، وتنظيم الفعاليات بالكامل. تخطيط وتنفيذ فعاليات متكاملة.",
+      "startSearch": "ابدأ بحثك"
+    },
+    "search": {
+      "placeholder": "خدمات البحث، DJ، خدمات تقديم الطعام...",
+      "filter": "فلتر"
+    },
+    "sectionTitle": "خدمات الحفلات",
+    "sectionDescription": "كل ما تحتاجه لاحتفال لا ينسى",
+    "services": {
+      "dj": {
+        "name": "خدمات الدي جي",
+        "description": "دي جي محترفين لأي نمط حدث",
+        "features": {
+          "soundSystem": "نظام الصوت",
+          "lighting": "إضاءة",
+          "playlistCreation": "إنشاء قائمة التشغيل"
+        }
+      },
+      "bartending": {
+        "name": "خدمات البار",
+        "description": "خبراء في خلط المشروبات وخدمة البار",
+        "features": {
+          "cocktailMenu": "قائمة الكوكتيلات",
+          "barSetup": "إعداد البار",
+          "staffIncluded": "الموظفين المشمولين"
+        }
+      },
+      "catering": {
+        "name": "خدمات الطعام والتموين",
+        "description": "خدمة طعام كاملة لحدثك",
+        "features": {
+          "customMenu": "القائمة المخصصة",
+          "dietaryOptions": "الخيارات الغذائية",
+          "setupCleanup": "الإعداد والتنظيف"
+        }
+      },
+      "planning": {
+        "name": "تخطيط الفعاليات",
+        "description": "تنسيق الفعاليات بالخدمة الكاملة",
+        "features": {
+          "coordination": "تنسيق",
+          "timelineManagement": "إدارة الجدول الزمني",
+          "vendorLiaison": "مسؤول الاتصال بالبائعين"
+        }
+      },
+      "lighting": {
+        "name": "الإضاءة والصوت",
+        "description": "إعداد صوتي ومرئي احترافي",
+        "features": {
+          "soundSystem": "نظام الصوت",
+          "lightingDesign": "تصميم الإضاءة",
+          "technicalSupport": "الدعم الفني"
+        }
+      },
+      "decoration": {
+        "name": "خدمات الديكور",
+        "description": "قم بتحويل مساحتك بشكل جميل",
+        "features": {
+          "themeDesign": "تصميم الثيم",
+          "floralArrangements": "تنسيقات الزهور",
+          "setupRemoval": "الإعداد والإزالة"
+        }
+      }
+    },
+    "from": "من",
+    "reviews": "المراجعات",
+    "getQuote": "احصل على عرض أسعار",
+    "inquiry": {
+      "title": "دعونا نخطط لحدثك",
+      "description": "أخبرنا عن احتفالك وسنساعدك في تنظيم كل شيء",
+      "name": "اسمك",
+      "email": "عنوان البريد الإلكتروني",
+      "phone": "رقم التليفون",
+      "eventDate": "تاريخ الحدث",
+      "guests": "عدد الضيوف",
+      "message": "أخبرنا عن حدثك",
+      "messagePlaceholder": "ما نوع الفعالية التي تخطط لها؟ هل لديك أي متطلبات خاصة؟",
+      "submit": "إرسال الاستفسار",
+      "responseTime": "سوف نقوم بالرد خلال ساعتين خلال ساعات العمل"
+    },
+    "features": {
+      "easyBooking": {
+        "title": "الحجز السهل",
+        "description": "عملية استفسار بسيطة، وخدمة شخصية، واستجابات سريعة"
+      },
+      "curatedSelection": {
+        "title": "مجموعة مختارة بعناية",
+        "description": "فقط الأماكن الأكثر جمالاً وصيانةً جيدًا هي التي تظهر في قائمتنا"
+      },
+      "personalService": {
+        "title": "الخدمة الشخصية",
+        "description": "التواصل المباشر مع أصحاب الأماكن للحصول على أفضل تجربة"
+      }
+    }
+  },
+  "boutique": {
+    "hero": {
+      "title": "مُختارة بعناية ووعي",
+      "description": "كل منتج يروي قصة عناية وحرفية وهدف. منتجات مستدامة وأصالة إيشك.",
+      "exploreCollection": "استكشاف المجموعة"
+    },
+    "originals": {
+      "title": "أصول إيشك",
+      "description": "ارتدِ قيمك. عِش فلسفتنا. منتجات مستدامة فاخرة مصممة بعناية.",
+      "viewAll": "عرض جميع أعمال إيشك الأصلية"
+    },
+    "search": {
+      "placeholder": "البحث عن المنتجات...",
+      "filter": "فلتر",
+      "sort": "نوع"
+    },
+    "categories": {
+      "all": "جميع المنتجات",
+      "homeLiving": "المنزل والمعيشة",
+      "wellness": "صحة",
+      "books": "كتب",
+      "originals": "🌟 أصول إيشك"
+    },
+    "products": {
+      "title": "جميع المنتجات",
+      "description": "عناصر مختارة بعناية",
+      "bestseller": "الأكثر مبيعًا",
+      "new": "جديد",
+      "addToCart": "أضف إلى السلة",
+      "reviews": "المراجعات"
+    },
+    "features": {
+      "sustainable": {
+        "title": "المواد المستدامة",
+        "description": "المواد العضوية والمعاد تدويرها والمصادر الأخلاقية فقط"
+      },
+      "ethical": {
+        "title": "الإنتاج الأخلاقي",
+        "description": "أجور عادلة وظروف عمل آمنة وسلاسل توريد شفافة"
+      },
+      "carbonNeutral": {
+        "title": "محايد للكربون",
+        "description": "مع كل طلبية، تزرع شجرة. شحن مجاني للطلبات التي تزيد عن ٧٥ يورو."
+      }
+    },
+    "cart": {
+      "title": "عربة التسوق",
+      "empty": "سلة التسوق الخاصة بك فارغة",
+      "continueShopping": "متابعة التسوق",
+      "subtotal": "المجموع الفرعي",
+      "shipping": "شحن",
+      "total": "المجموع",
+      "checkout": "الدفع"
+    }
+  },
+  "photography": {
+    "hero": {
+      "title": "دعونا نلتقط الجمال في قصتك",
+      "description": "خدمات تصوير احترافية، تصوير، تعديل، ورتوش. كل لحظة تستحق أن تُخلّد في الذاكرة.",
+      "bookSession": "احجز جلسة"
+    },
+    "portfolio": {
+      "title": "محفظتنا الاستثمارية",
+      "description": "لمحة عن القصص التي التقطناها",
+      "all": "الجميع",
+      "cultural": "ثقافي",
+      "adventure": "مفامرة",
+      "socialMedia": "وسائل التواصل الاجتماعي"
+    },
+    "services": {
+      "title": "خدماتنا",
+      "description": "حزم احترافية مصممة خصيصًا لتلبية احتياجاتك",
+      "portrait": {
+        "name": "جلسة تصوير",
+        "duration": "ساعاتين",
+        "includes": {
+          "shoot": "جلسة تصوير احترافية",
+          "images": "30 صورة عالية الدقة تم تعديلها",
+          "gallery": "معرض على الإنترنت",
+          "retouching": "التنقيح الأساسي"
+        }
+      },
+      "event": {
+        "name": "تصوير الفعاليات",
+        "duration": "4 ساعات",
+        "includes": {
+          "coverage": "التغطية الكاملة للحدث",
+          "images": "أكثر من 100 صورة مُحررة",
+          "gallery": "معرض على الإنترنت",
+          "preview": "معاينة في نفس اليوم"
+        }
+      },
+      "commercial": {
+        "name": "تصوير تجاري",
+        "duration": "يوم كامل",
+        "includes": {
+          "shoot": "تصوير المنتجات/نمط الحياة",
+          "images": "أكثر من 200 صورة مُحررة",
+          "angles": "زوايا متعددة",
+          "files": "ملفات جاهزة للعلامة التجارية"
+        }
+      },
+      "wedding": {
+        "name": "باقة الزفاف",
+        "duration": "يوم كامل",
+        "includes": {
+          "coverage": "حفل واستقبال",
+          "images": "أكثر من 300 صورة مُحررة",
+          "session": "جلسة الخطوبة",
+          "album": "ألبوم مميز"
+        }
+      },
+      "bookNow": "احجز الآن"
+    },
+    "testimonials": {
+      "title": "ماذا يقول عملاؤنا"
+    },
+    "booking": {
+      "title": "احجز جلستك",
+      "description": "دعونا نناقش رؤيتك ونخلق شيئًا جميلًا معًا",
+      "name": "اسمك",
+      "email": "عنوان البريد الإلكتروني",
+      "phone": "رقم التليفون",
+      "preferredDate": "التاريخ المفضل",
+      "serviceType": "نوع الخدمة",
+      "message": "أخبرنا عن مشروعك",
+      "messagePlaceholder": "ما نوع التصوير الذي تحتاجه؟ هل لديك أي متطلبات أو أفكار محددة؟",
+      "submit": "إرسال الاستفسار",
+      "responseTime": "سوف نقوم بالرد خلال 24 ساعة لمناقشة مشروعك",
+      "serviceTypes": {
+        "portrait": "جلسة تصوير",
+        "event": "تصوير الفعاليات",
+        "commercial": "تصوير تجاري",
+        "wedding": "باقة الزفاف",
+        "other": "آخر"
+      }
+    },
+    "features": {
+      "editing": {
+        "title": "التحرير الاحترافي",
+        "description": "يتم تحرير كل صورة بعناية إلى حد الكمال، مما يضمن الحصول على نتائج بأعلى جودة"
+      },
+      "resolution": {
+        "title": "ملفات عالية الدقة",
+        "description": "احصل على جميع الصور بتنسيق عالي الدقة، مثالي للطباعة والمشاركة"
+      },
+      "video": {
+        "title": "خدمات الفيديو",
+        "description": "نحن نقدم أيضًا خدمات إنتاج الفيديو للأحداث والإعلانات والمزيد"
+      }
+    },
+    "contact": {
+      "title": "تواصل معنا",
+      "description": "هل أنت مستعد لسرد قصتك؟ دعنا نناقش مشروعك.",
+      "email": "بريد إلكتروني",
+      "phone": "هاتف",
+      "sendMessage": "إرسال رسالة"
+    },
+    "categories": {
+      "all": "الجميع",
+      "cultural": "ثقافي",
+      "adventure": "مفامرة",
+      "socialMedia": "وسائل التواصل الاجتماعي"
+    }
+  },
+  "association": {
+    "hero": {
+      "title": "أفعال صغيرة، تأثير كبير",
+      "description": "انضم إلى مجتمع يهتم. أنشطة غير ربحية بشفافية تامة.",
+      "exploreCampaigns": "استكشاف الحملات"
+    },
+    "impact": {
+      "title": "تأثيرنا",
+      "description": "معًا، نحن نصنع الفارق",
+      "stats": {
+        "treesPlanted": "الأشجار المزروعة",
+        "livesImpacted": "حياة متأثرة",
+        "projectsCompleted": "المشاريع المنجزة",
+        "countriesReached": "الدول التي تم الوصول إليها"
+      }
+    },
+    "campaigns": {
+      "title": "الحملات النشطة",
+      "description": "دعم القضايا التي تتوافق مع قيمنا",
+      "treePlanting": {
+        "title": "مبادرة غرس الأشجار",
+        "description": "غرس الأشجار في المناطق التي أزيلت منها الغابات لاستعادة النظم البيئية ومكافحة تغير المناخ.",
+        "category": "بيئة",
+        "impact": "🌳 تم زراعة 7500 شجرة"
+      },
+      "cleanWater": {
+        "title": "الوصول إلى المياه النظيفة",
+        "description": "توفير آبار المياه النظيفة وأنظمة الترشيح للمجتمعات المحتاجة.",
+        "category": "مجتمع",
+        "impact": "💧 تم تركيب 15 بئرًا"
+      },
+      "education": {
+        "title": "التعليم للجميع",
+        "description": "دعم المدارس وتوفير المواد التعليمية للمجتمعات المحرومة.",
+        "category": "تعليم",
+        "impact": "📚 تم دعم 500 طالب"
+      },
+      "wildlife": {
+        "title": "الحفاظ على الحياة البرية",
+        "description": "حماية الأنواع المهددة بالانقراض وموائلها من خلال جهود الحفاظ عليها.",
+        "category": "الحياة البرية",
+        "impact": "🦋 3 مناطق محمية"
+      }
+    },
+    "transparency": {
+      "title": "الشفافية الكاملة",
+      "description": "يتم تتبع كل تبرع، وقياس كل تأثير، ومشاركة كل نتيجة.",
+      "trackImpact": {
+        "title": "تتبع تأثيرك",
+        "description": "شاهد بالضبط أين تذهب تبرعاتك والفرق الذي تحدثه"
+      },
+      "verifiedPartners": {
+        "title": "الشركاء المعتمدون",
+        "description": "يتم فحص جميع المنظمات الشريكة لدينا والتحقق منها لتحقيق أقصى قدر من التأثير"
+      },
+      "regularUpdates": {
+        "title": "تحديثات منتظمة",
+        "description": "احصل على تحديثات حول تقدم الحملة وشاهد التأثير الحقيقي في العالم الحقيقي"
+      }
+    },
+    "cta": {
+      "title": "انضم إلى الحركة",
+      "description": "معًا، يُمكننا إحداث تغييرٍ هادف. كلُّ مساهمة، مهما كانت صغيرة، تُحدث فرقًا.",
+      "startMakingImpact": "ابدأ في إحداث تأثير"
+    },
+    "common": {
+      "donate": "تبرع الآن",
+      "learnMore": "يتعلم أكثر",
+      "goal": "هدف",
+      "raised": "نشأ",
+      "of": "ل",
+      "complete": "مكتمل"
+    }
+  },
+  "auth": {
+    "signin": {
+      "title": "مرحبًا بعودتك",
+      "subtitle": "تسجيل الدخول إلى حسابك",
+      "email": "بريد إلكتروني",
+      "password": "كلمة المرور",
+      "signIn": "تسجيل الدخول",
+      "noAccount": "ليس لديك حساب؟",
+      "signUp": "اشتراك"
+    },
+    "register": {
+      "title": "إنشاء حساب",
+      "subtitle": "انضم إلينا للتسوق وتتبع الطلبات والمزيد.",
+      "name": "اسم",
+      "email": "بريد إلكتروني",
+      "password": "كلمة المرور",
+      "confirmPassword": "تأكيد كلمة المرور",
+      "createAccount": "إنشاء حساب",
+      "haveAccount": "هل لديك حساب بالفعل؟",
+      "signIn": "تسجيل الدخول"
+    }
+  },
+  "common": {
+    "loading": "تحميل...",
+    "error": "خطأ",
+    "success": "نجاح",
+    "save": "يحفظ",
+    "cancel": "يلغي",
+    "delete": "يمسح",
+    "edit": "يحرر",
+    "view": "منظر",
+    "search": "يبحث",
+    "filter": "فلتر",
+    "close": "يغلق",
+    "back": "خلف",
+    "next": "التالي",
+    "previous": "سابق",
+    "submit": "يُقدِّم",
+    "continue": "يكمل"
   },
   "services": {
     "news": {
-      "title": "أخبار إيشك العالمية",
+      "title": "أخبار العالم من إيشك",
       "subtitle": "كرة أرضية تفاعلية + ملخصات مختارة",
-      "description": "ابق على اطلاع دون أن تطغى عليك. ملخصات أخبار مدعومة بالذكاء الاصطناعي تحترم وقتك."
+      "description": "ابقَ مطلعًا، لا تشعر بالإرهاق. نشرات إخبارية موجزة مدعومة بالذكاء الاصطناعي تحترم وقتك."
     },
     "party": {
-      "title": "حفلات إيشك",
-      "subtitle": "احجز أماكن وخدمات مناسبة للحفلات",
-      "description": "احتفل بلحظات الحياة في مساحات جميلة. أماكن وخدمات مختارة بعناية."
+      "title": "حزب العشق",
+      "subtitle": "تخطيط الفعاليات بالخدمة الكاملة",
+      "description": "خدمات تنسيق الموسيقى، والمأكولات والمشروبات، وتنظيم الفعاليات بالكامل. تخطيط وتنفيذ فعاليات متكاملة."
     },
     "boutique": {
-      "title": "متجر إيشك",
-      "subtitle": "تبرع، أعد الاستخدام، وادعم القضايا",
-      "description": "خيارات واعية، مختارة بعناية. منتجات مستدامة وأصليات إيشك."
+      "title": "بوتيك عشق",
+      "subtitle": "التبرع وإعادة الاستخدام ودعم القضايا",
+      "description": "اختيارات واعية، مختارة بعناية. منتجات مستدامة وأصلية من إيشك."
     },
     "association": {
-      "title": "جمعية إيشك",
-      "subtitle": "إجراءات غير ربحية وشفافية",
-      "description": "إجراءات صغيرة، تأثير كبير. انضم إلى مجتمع يهتم."
+      "title": "جمعية عشق",
+      "subtitle": "الإجراءات غير الربحية والشفافية",
+      "description": "أفعال صغيرة، أثر كبير. انضم إلى مجتمع يهتم."
     },
     "photography": {
-      "title": "التصوير والتحرير",
-      "subtitle": "جلسات، تحرير، تنميق",
-      "description": "دعنا نلتقط جمال قصتك."
+      "title": "التصوير والمونتاج",
+      "subtitle": "التصوير والتعديل والتنقيح",
+      "description": "دعونا نلتقط الجمال في قصتك."
+    },
+    "housing": {
+      "title": "إيشك للإسكان",
+      "subtitle": "أماكن إقامة مختارة بعناية",
+      "description": "أماكن إقامة رائعة ومُصممة بعناية لضيوف مناسبتكم. مساحات مريحة تُكمل احتفالكم."
+    },
+    "partyServices": {
+      "title": "حزب إيشك",
+      "subtitle": "تخطيط الفعاليات بالخدمة الكاملة",
+      "description": "خدمات تنسيق الموسيقى، والمأكولات والمشروبات، وتنظيم الفعاليات بالكامل. تخطيط وتنفيذ فعاليات متكاملة."
     }
   }
 }
-
-
-
-
-
-
